--- a/Seminar1_GeoSpatial_data_storage_and_calculation/sedona_geoparquet/notebooks/03.Real_world_problems.ipynb
+++ b/Seminar1_GeoSpatial_data_storage_and_calculation/sedona_geoparquet/notebooks/03.Real_world_problems.ipynb
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:49:43.807819Z",
-     "start_time": "2025-01-07T13:49:41.781958Z"
+     "end_time": "2025-01-09T10:00:14.496073Z",
+     "start_time": "2025-01-09T10:00:11.486352Z"
     }
    },
    "cell_type": "code",
@@ -39,8 +39,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:49:43.982664Z",
-     "start_time": "2025-01-07T13:49:43.974698Z"
+     "end_time": "2025-01-09T10:00:15.601797Z",
+     "start_time": "2025-01-09T10:00:15.594251Z"
     }
    },
    "cell_type": "code",
@@ -64,8 +64,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:49:44.727928Z",
-     "start_time": "2025-01-07T13:49:44.722834Z"
+     "end_time": "2025-01-09T10:00:18.669281Z",
+     "start_time": "2025-01-09T10:00:18.661934Z"
     }
    },
    "cell_type": "code",
@@ -90,8 +90,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:49:55.219576Z",
-     "start_time": "2025-01-07T13:49:45.468553Z"
+     "end_time": "2025-01-09T10:00:28.571722Z",
+     "start_time": "2025-01-09T10:00:19.658336Z"
     }
    },
    "cell_type": "code",
@@ -113,9 +113,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/01/07 14:49:49 WARN Utils: Your hostname, pliu-ubuntu24 resolves to a loopback address: 127.0.1.1; using 192.168.30.128 instead (on interface ens33)\n",
-      "25/01/07 14:49:49 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "25/01/07 14:49:49 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "25/01/09 11:00:23 WARN Utils: Your hostname, pliu-ubuntu24 resolves to a loopback address: 127.0.1.1; using 192.168.30.128 instead (on interface ens33)\n",
+      "25/01/09 11:00:23 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/01/09 11:00:24 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
@@ -126,8 +126,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:03.994846Z",
-     "start_time": "2025-01-07T13:49:55.269746Z"
+     "end_time": "2025-01-09T10:00:37.659068Z",
+     "start_time": "2025-01-09T10:00:28.655661Z"
     }
    },
    "cell_type": "code",
@@ -152,8 +152,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:04.024114Z",
-     "start_time": "2025-01-07T13:50:04.006444Z"
+     "end_time": "2025-01-09T10:00:37.678303Z",
+     "start_time": "2025-01-09T10:00:37.669807Z"
     }
    },
    "cell_type": "code",
@@ -181,8 +181,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:05.439482Z",
-     "start_time": "2025-01-07T13:50:04.064144Z"
+     "end_time": "2025-01-09T10:00:55.500741Z",
+     "start_time": "2025-01-09T10:00:53.747435Z"
     }
    },
    "cell_type": "code",
@@ -202,8 +202,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:07.434417Z",
-     "start_time": "2025-01-07T13:50:05.483646Z"
+     "end_time": "2025-01-09T10:01:02.998768Z",
+     "start_time": "2025-01-09T10:01:00.478833Z"
     }
    },
    "cell_type": "code",
@@ -257,8 +257,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:07.579743Z",
-     "start_time": "2025-01-07T13:50:07.452137Z"
+     "end_time": "2025-01-09T10:01:21.627860Z",
+     "start_time": "2025-01-09T10:01:21.418666Z"
     }
    },
    "cell_type": "code",
@@ -270,8 +270,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:08.826117Z",
-     "start_time": "2025-01-07T13:50:07.604516Z"
+     "end_time": "2025-01-09T10:01:23.611185Z",
+     "start_time": "2025-01-09T10:01:22.632955Z"
     }
    },
    "cell_type": "code",
@@ -281,13 +281,6 @@
    ],
    "id": "68a8069e2001240a",
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 5:>                                                          (0 + 1) / 1]\r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -323,8 +316,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:08.916546Z",
-     "start_time": "2025-01-07T13:50:08.864768Z"
+     "end_time": "2025-01-09T10:01:29.183984Z",
+     "start_time": "2025-01-09T10:01:29.128304Z"
     }
    },
    "cell_type": "code",
@@ -339,8 +332,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:08.989663Z",
-     "start_time": "2025-01-07T13:50:08.984995Z"
+     "end_time": "2025-01-09T10:01:29.828685Z",
+     "start_time": "2025-01-09T10:01:29.819910Z"
     }
    },
    "cell_type": "code",
@@ -365,8 +358,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:09.065614Z",
-     "start_time": "2025-01-07T13:50:09.062005Z"
+     "end_time": "2025-01-09T10:01:46.250478Z",
+     "start_time": "2025-01-09T10:01:46.242782Z"
     }
    },
    "cell_type": "code",
@@ -385,8 +378,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:09.540998Z",
-     "start_time": "2025-01-07T13:50:09.134686Z"
+     "end_time": "2025-01-09T10:01:57.012738Z",
+     "start_time": "2025-01-09T10:01:56.732752Z"
     }
    },
    "cell_type": "code",
@@ -398,8 +391,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:18.368918Z",
-     "start_time": "2025-01-07T13:50:09.596582Z"
+     "end_time": "2025-01-09T10:02:08.234517Z",
+     "start_time": "2025-01-09T10:02:00.958087Z"
     }
    },
    "cell_type": "code",
@@ -491,8 +484,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 16.3 ms, sys: 7.75 ms, total: 24.1 ms\n",
-      "Wall time: 8.75 s\n"
+      "CPU times: user 11.5 ms, sys: 5.02 ms, total: 16.5 ms\n",
+      "Wall time: 7.25 s\n"
      ]
     },
     {
@@ -518,8 +511,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:18.449987Z",
-     "start_time": "2025-01-07T13:50:18.445493Z"
+     "end_time": "2025-01-09T10:02:33.739083Z",
+     "start_time": "2025-01-09T10:02:33.734871Z"
     }
    },
    "cell_type": "code",
@@ -536,8 +529,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:18.571008Z",
-     "start_time": "2025-01-07T13:50:18.496084Z"
+     "end_time": "2025-01-09T10:02:34.606429Z",
+     "start_time": "2025-01-09T10:02:34.490938Z"
     }
    },
    "cell_type": "code",
@@ -549,8 +542,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:23.273810Z",
-     "start_time": "2025-01-07T13:50:18.602157Z"
+     "end_time": "2025-01-09T10:02:39.854366Z",
+     "start_time": "2025-01-09T10:02:35.075191Z"
     }
    },
    "cell_type": "code",
@@ -602,8 +595,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.5 ms, sys: 6.66 ms, total: 24.2 ms\n",
-      "Wall time: 4.66 s\n"
+      "CPU times: user 8.43 ms, sys: 3.91 ms, total: 12.3 ms\n",
+      "Wall time: 4.76 s\n"
      ]
     },
     {
@@ -642,8 +635,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:23.702771Z",
-     "start_time": "2025-01-07T13:50:23.335768Z"
+     "end_time": "2025-01-09T10:03:01.764415Z",
+     "start_time": "2025-01-09T10:03:01.354458Z"
     }
    },
    "cell_type": "code",
@@ -658,8 +651,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:25.242227Z",
-     "start_time": "2025-01-07T13:50:23.775512Z"
+     "end_time": "2025-01-09T10:03:04.451340Z",
+     "start_time": "2025-01-09T10:03:02.760508Z"
     }
    },
    "cell_type": "code",
@@ -713,8 +706,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:25.290957Z",
-     "start_time": "2025-01-07T13:50:25.283367Z"
+     "end_time": "2025-01-09T10:03:04.565173Z",
+     "start_time": "2025-01-09T10:03:04.553309Z"
     }
    },
    "cell_type": "code",
@@ -756,8 +749,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:25.558160Z",
-     "start_time": "2025-01-07T13:50:25.549284Z"
+     "end_time": "2025-01-09T10:03:06.837665Z",
+     "start_time": "2025-01-09T10:03:06.821047Z"
     }
    },
    "cell_type": "code",
@@ -773,8 +766,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:25.796390Z",
-     "start_time": "2025-01-07T13:50:25.712982Z"
+     "end_time": "2025-01-09T10:03:07.721716Z",
+     "start_time": "2025-01-09T10:03:07.635229Z"
     }
    },
    "cell_type": "code",
@@ -786,8 +779,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:25.908369Z",
-     "start_time": "2025-01-07T13:50:25.874941Z"
+     "end_time": "2025-01-09T10:03:10.674704Z",
+     "start_time": "2025-01-09T10:03:10.592400Z"
     }
    },
    "cell_type": "code",
@@ -799,8 +792,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:28.929695Z",
-     "start_time": "2025-01-07T13:50:25.957830Z"
+     "end_time": "2025-01-09T10:03:15.273839Z",
+     "start_time": "2025-01-09T10:03:11.429511Z"
     }
    },
    "cell_type": "code",
@@ -811,7 +804,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 14:=========================================>                (5 + 2) / 7]\r"
+      "[Stage 14:=================================================>        (6 + 1) / 7]\r"
      ]
     },
     {
@@ -834,8 +827,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:31.456404Z",
-     "start_time": "2025-01-07T13:50:29.046348Z"
+     "end_time": "2025-01-09T10:03:19.723907Z",
+     "start_time": "2025-01-09T10:03:16.662269Z"
     }
    },
    "cell_type": "code",
@@ -909,8 +902,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:34.913834Z",
-     "start_time": "2025-01-07T13:50:32.748803Z"
+     "end_time": "2025-01-09T10:04:21.145009Z",
+     "start_time": "2025-01-09T10:04:17.990299Z"
     }
    },
    "cell_type": "code",
@@ -921,7 +914,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 22:=================================>                        (4 + 3) / 7]\r"
+      "[Stage 19:=================================================>        (6 + 1) / 7]\r"
      ]
     },
     {
@@ -939,19 +932,26 @@
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:35.599954Z",
-     "start_time": "2025-01-07T13:50:34.958838Z"
+     "end_time": "2025-01-09T10:04:22.233673Z",
+     "start_time": "2025-01-09T10:04:21.284892Z"
     }
    },
    "cell_type": "code",
    "source": "doctor_df.show(5)",
    "id": "690f45749cf3b775",
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 22:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -968,15 +968,22 @@
       "only showing top 5 rows\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:36.227582Z",
-     "start_time": "2025-01-07T13:50:35.675696Z"
+     "end_time": "2025-01-09T10:04:23.972349Z",
+     "start_time": "2025-01-09T10:04:22.483987Z"
     }
    },
    "cell_type": "code",
@@ -998,15 +1005,22 @@
       " info      | {13, 2023-11-10 21:41:55, 0, 0, , NULL}                                                                                                                                                                                                                  \n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:36.318902Z",
-     "start_time": "2025-01-07T13:50:36.303541Z"
+     "end_time": "2025-01-09T10:04:39.429986Z",
+     "start_time": "2025-01-09T10:04:39.415468Z"
     }
    },
    "cell_type": "code",
@@ -1069,7 +1083,7 @@
    ],
    "id": "3b1f05f53fa9222d",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 30
   },
   {
    "metadata": {},
@@ -1084,8 +1098,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:36.476262Z",
-     "start_time": "2025-01-07T13:50:36.340533Z"
+     "end_time": "2025-01-09T10:06:55.703415Z",
+     "start_time": "2025-01-09T10:06:55.357249Z"
     }
    },
    "cell_type": "code",
@@ -1102,13 +1116,13 @@
    ],
    "id": "cd80b279648f6cd1",
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:43.983783Z",
-     "start_time": "2025-01-07T13:50:36.506406Z"
+     "end_time": "2025-01-09T10:07:13.807114Z",
+     "start_time": "2025-01-09T10:07:05.574471Z"
     }
    },
    "cell_type": "code",
@@ -1119,7 +1133,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 29:=================================================>        (6 + 1) / 7]\r"
+      "[Stage 26:=================================================>        (6 + 1) / 7]\r"
      ]
     },
     {
@@ -1147,7 +1161,7 @@
      ]
     }
    ],
-   "execution_count": 33
+   "execution_count": 32
   },
   {
    "metadata": {
@@ -1179,8 +1193,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:44.365478Z",
-     "start_time": "2025-01-07T13:50:44.350877Z"
+     "end_time": "2025-01-09T10:20:49.007495Z",
+     "start_time": "2025-01-09T10:20:48.998643Z"
     }
    },
    "cell_type": "code",
@@ -1198,14 +1212,15 @@
     "                         hospital_geo.tags,\n",
     "                         ST_AsGeoJSON(ST_Transform(hospital_geo.location, '{target_epsg_code}', 'epsg:4326')) hospital_point, \n",
     "                         ST_DistanceSphere(ST_GeomFromWKT('{patient_loc}'), hospital_geo.location) distance_meter\n",
-    "                         FROM hospital_geo order by distance_meter asc;\n",
+    "                         FROM hospital_geo\n",
+    "                         order by distance_meter asc;\n",
     "\"\"\")\n",
     "    near_hospital_df= tmp_df.filter(tmp_df.distance_meter<=distance)\n",
     "    return near_hospital_df"
    ],
    "id": "ca31d1c4b91ca56b",
    "outputs": [],
-   "execution_count": 35
+   "execution_count": 34
   },
   {
    "metadata": {
@@ -1243,8 +1258,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:44.644889Z",
-     "start_time": "2025-01-07T13:50:44.637819Z"
+     "end_time": "2025-01-09T10:20:52.988117Z",
+     "start_time": "2025-01-09T10:20:52.983187Z"
     }
    },
    "cell_type": "code",
@@ -1263,7 +1278,7 @@
      ]
     }
    ],
-   "execution_count": 36
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -1274,14 +1289,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-07T13:50:45.291376Z",
-     "start_time": "2025-01-07T13:50:44.761467Z"
+     "end_time": "2025-01-09T10:21:32.019047Z",
+     "start_time": "2025-01-09T10:21:31.725693Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# get all hospital within 5000 meter of CASD\n",
-    "casd_near_hos_df= get_near_hospital(casd_geo, 5000)\n",
+    "casd_near_hos_df= get_near_hospital(casd_geo, 15000)\n",
     "casd_near_hos_df.show(5)"
    ],
    "id": "350ac3f7b65b3b42",
@@ -1304,7 +1319,31 @@
      ]
     }
    ],
-   "execution_count": 37
+   "execution_count": 38
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-09T10:21:33.413233Z",
+     "start_time": "2025-01-09T10:21:33.073256Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "casd_near_hos_df.count()",
+   "id": "8b0b08aa41f17892",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "154"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 39
   },
   {
    "metadata": {
