--- a/Seminar5_Data_validation/01.Data_profiling.ipynb
+++ b/Seminar5_Data_validation/01.Data_profiling.ipynb
@@ -62,8 +62,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:10:12.625758Z",
-     "start_time": "2025-07-01T16:10:09.523530Z"
+     "end_time": "2025-07-01T16:40:08.117010Z",
+     "start_time": "2025-07-01T16:40:05.696513Z"
     }
    },
    "source": [
@@ -92,20 +92,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:10:28.651921Z",
-     "start_time": "2025-07-01T16:10:28.643917Z"
+     "end_time": "2025-07-01T16:40:30.836996Z",
+     "start_time": "2025-07-01T16:40:30.832386Z"
     }
    },
    "cell_type": "code",
    "source": "file_path = \"../data/csv/us_census_1994.csv\"",
    "id": "820c4771bdb52ece",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -116,15 +116,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:10:34.313697Z",
-     "start_time": "2025-07-01T16:10:34.238277Z"
+     "end_time": "2025-07-02T07:04:47.145606Z",
+     "start_time": "2025-07-02T07:04:47.058956Z"
     }
    },
    "cell_type": "code",
    "source": [
     "columns = [\"age\", \"workclass\", \"fnlwgt\", \"education\", \"education-num\", \"marital-status\", \"occupation\", \"relationship\",\n",
     "           \"race\", \"sex\", \"capital-gain\", \"capital-loss\", \"hours-per-week\", \"native-country\", \"income\"]\n",
-    "df = pd.read_csv(file_path, names=columns, header=None)\n",
+    "df = pd.read_csv(file_path, names=columns, header=0)\n",
     "df.head()"
    ],
    "id": "fb69adc2bf6bcb26",
@@ -133,25 +133,25 @@
      "data": {
       "text/plain": [
        "   age         workclass  fnlwgt  education  education-num  \\\n",
-       "0  age         workclass  fnlwgt  education  education-num   \n",
-       "1   39         State-gov   77516  Bachelors             13   \n",
-       "2   50  Self-emp-not-inc   83311  Bachelors             13   \n",
-       "3   38           Private  215646    HS-grad              9   \n",
-       "4   53           Private  234721       11th              7   \n",
+       "0   39         State-gov   77516  Bachelors             13   \n",
+       "1   50  Self-emp-not-inc   83311  Bachelors             13   \n",
+       "2   38           Private  215646    HS-grad              9   \n",
+       "3   53           Private  234721       11th              7   \n",
+       "4   28           Private  338409  Bachelors             13   \n",
        "\n",
-       "       marital-status         occupation   relationship   race   sex  \\\n",
-       "0       marial-status         occupation   relationship   race   sex   \n",
-       "1       Never-married       Adm-clerical  Not-in-family  White  Male   \n",
-       "2  Married-civ-spouse    Exec-managerial        Husband  White  Male   \n",
-       "3            Divorced  Handlers-cleaners  Not-in-family  White  Male   \n",
-       "4  Married-civ-spouse  Handlers-cleaners        Husband  Black  Male   \n",
+       "       marital-status         occupation   relationship   race     sex  \\\n",
+       "0       Never-married       Adm-clerical  Not-in-family  White    Male   \n",
+       "1  Married-civ-spouse    Exec-managerial        Husband  White    Male   \n",
+       "2            Divorced  Handlers-cleaners  Not-in-family  White    Male   \n",
+       "3  Married-civ-spouse  Handlers-cleaners        Husband  Black    Male   \n",
+       "4  Married-civ-spouse     Prof-specialty           Wife  Black  Female   \n",
        "\n",
-       "   capital-gain  capital-loss  hours-per-week  native-country  income  \n",
-       "0  capital-gain  capital-loss  hours-per-week  native-country  income  \n",
-       "1          2174             0              40   United-States   <=50K  \n",
-       "2             0             0              13   United-States   <=50K  \n",
-       "3             0             0              40   United-States   <=50K  \n",
-       "4             0             0              40   United-States   <=50K  "
+       "   capital-gain  capital-loss  hours-per-week native-country income  \n",
+       "0          2174             0              40  United-States  <=50K  \n",
+       "1             0             0              13  United-States  <=50K  \n",
+       "2             0             0              40  United-States  <=50K  \n",
+       "3             0             0              40  United-States  <=50K  \n",
+       "4             0             0              40           Cuba  <=50K  "
       ],
       "text/html": [
        "<div>\n",
@@ -192,24 +192,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>age</td>\n",
-       "      <td>workclass</td>\n",
-       "      <td>fnlwgt</td>\n",
-       "      <td>education</td>\n",
-       "      <td>education-num</td>\n",
-       "      <td>marial-status</td>\n",
-       "      <td>occupation</td>\n",
-       "      <td>relationship</td>\n",
-       "      <td>race</td>\n",
-       "      <td>sex</td>\n",
-       "      <td>capital-gain</td>\n",
-       "      <td>capital-loss</td>\n",
-       "      <td>hours-per-week</td>\n",
-       "      <td>native-country</td>\n",
-       "      <td>income</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>39</td>\n",
        "      <td>State-gov</td>\n",
        "      <td>77516</td>\n",
@@ -227,7 +209,7 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>50</td>\n",
        "      <td>Self-emp-not-inc</td>\n",
        "      <td>83311</td>\n",
@@ -245,7 +227,7 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>38</td>\n",
        "      <td>Private</td>\n",
        "      <td>215646</td>\n",
@@ -263,7 +245,7 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>53</td>\n",
        "      <td>Private</td>\n",
        "      <td>234721</td>\n",
@@ -280,23 +262,41 @@
        "      <td>United-States</td>\n",
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>338409</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Prof-specialty</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Cuba</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:10:54.371990Z",
-     "start_time": "2025-07-01T16:10:54.312830Z"
+     "end_time": "2025-07-02T07:04:56.603203Z",
+     "start_time": "2025-07-02T07:04:56.569996Z"
     }
    },
    "cell_type": "code",
@@ -307,33 +307,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          age workclass  fnlwgt education education-num      marital-status  \\\n",
-      "count   32562     32562   32562     32562         32562               32562   \n",
-      "unique     74        10   21649        17            17                   8   \n",
-      "top        36   Private  203488   HS-grad             9  Married-civ-spouse   \n",
-      "freq      898     22696      13     10501         10501               14976   \n",
+      "                age        fnlwgt  education-num  capital-gain  capital-loss  \\\n",
+      "count  32561.000000  3.256100e+04   32561.000000  32561.000000  32561.000000   \n",
+      "mean      38.581647  1.897784e+05      10.080679   1077.648844     87.303830   \n",
+      "std       13.640433  1.055500e+05       2.572720   7385.292085    402.960219   \n",
+      "min       17.000000  1.228500e+04       1.000000      0.000000      0.000000   \n",
+      "25%       28.000000  1.178270e+05       9.000000      0.000000      0.000000   \n",
+      "50%       37.000000  1.783560e+05      10.000000      0.000000      0.000000   \n",
+      "75%       48.000000  2.370510e+05      12.000000      0.000000      0.000000   \n",
+      "max       90.000000  1.484705e+06      16.000000  99999.000000   4356.000000   \n",
       "\n",
-      "            occupation relationship   race    sex capital-gain capital-loss  \\\n",
-      "count            32562        32562  32562  32562        32562        32562   \n",
-      "unique              16            7      6      3          120           93   \n",
-      "top     Prof-specialty      Husband  White   Male            0            0   \n",
-      "freq              4140        13193  27816  21790        29849        31042   \n",
-      "\n",
-      "       hours-per-week native-country income  \n",
-      "count           32562          32562  32562  \n",
-      "unique             95             43      3  \n",
-      "top                40  United-States  <=50K  \n",
-      "freq            15217          29170  24720  \n"
+      "       hours-per-week  \n",
+      "count    32561.000000  \n",
+      "mean        40.437456  \n",
+      "std         12.347429  \n",
+      "min          1.000000  \n",
+      "25%         40.000000  \n",
+      "50%         40.000000  \n",
+      "75%         45.000000  \n",
+      "max         99.000000  \n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:12:20.768002Z",
-     "start_time": "2025-07-01T16:12:15.337183Z"
+     "end_time": "2025-07-02T07:05:08.605997Z",
+     "start_time": "2025-07-02T07:05:01.543494Z"
     }
    },
    "cell_type": "code",
@@ -351,7 +353,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c30216585194418f90437319836c5316"
+       "model_id": "3aca78d9bb4748c9b5367fa8ee319d46"
       }
      },
      "metadata": {},
@@ -363,7 +365,7 @@
      "text": [
       "\n",
       "  0%|          | 0/15 [00:00<?, ?it/s]\u001B[A\n",
-      "100%|██████████| 15/15 [00:00<00:00, 46.97it/s][A\n"
+      "100%|██████████| 15/15 [00:00<00:00, 144.67it/s]\u001B[A\n"
      ]
     },
     {
@@ -374,7 +376,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6564c0605b864de7b87d83f47c3d6163"
+       "model_id": "226578b041e6414eb2d413f4aa119def"
       }
      },
      "metadata": {},
@@ -388,7 +390,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "1e3282ea68d9449b8e9885e873ed92e1"
+       "model_id": "b59a90f1278e4967b30889537a33ab04"
       }
      },
      "metadata": {},
@@ -402,14 +404,14 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "aaee6a6caae24e5b8504e983768d9beb"
+       "model_id": "f4299fe7385e4c6d9e0498b9094282ce"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 6
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -420,8 +422,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:16:21.698136Z",
-     "start_time": "2025-07-01T16:15:47.652273Z"
+     "end_time": "2025-07-01T16:42:40.650186Z",
+     "start_time": "2025-07-01T16:42:37.033132Z"
     }
    },
    "cell_type": "code",
@@ -432,13 +434,13 @@
    ],
    "id": "fcaf8b08445ec084",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:16:23.693681Z",
-     "start_time": "2025-07-01T16:16:23.685372Z"
+     "end_time": "2025-07-01T16:43:17.669159Z",
+     "start_time": "2025-07-01T16:43:17.654254Z"
     }
    },
    "cell_type": "code",
@@ -464,13 +466,13 @@
    ],
    "id": "b494fe414a41b9bb",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:16:28.149926Z",
-     "start_time": "2025-07-01T16:16:25.929869Z"
+     "end_time": "2025-07-01T16:43:20.262594Z",
+     "start_time": "2025-07-01T16:43:18.525935Z"
     }
    },
    "cell_type": "code",
@@ -505,13 +507,13 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:16:51.467623Z",
-     "start_time": "2025-07-01T16:16:48.455975Z"
+     "end_time": "2025-07-01T16:43:23.417620Z",
+     "start_time": "2025-07-01T16:43:20.862675Z"
     }
    },
    "cell_type": "code",
@@ -536,7 +538,7 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 9
   },
   {
    "metadata": {},
