--- a/Seminar5_Data_validation/01.Data_profiling.ipynb
+++ b/Seminar5_Data_validation/01.Data_profiling.ipynb
@@ -52,7 +52,16 @@
     "\n",
     "# via conda\n",
     "conda install -c conda-forge ydata-profiling\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "If you want to use spark as backend, you need to install ydata with the spark extension.\n",
+    "\n",
+    "```shell\n",
+    "pip install ydata-profiling[spark]\n",
+    "```\n",
+    "\n",
+    "> The official doc use `pip install ydata-profiling[pyspark]`, which is wrong. You can check the origin https://github.com/ydataai/ydata-profiling/blob/develop/pyproject.toml. The mode is spark, not pyspark\n",
+    " > The spark mode was introduced in version **v4.0.0**\n"
    ],
    "id": "b78eadd5bf732a8b"
   },
@@ -62,8 +71,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:40:08.117010Z",
-     "start_time": "2025-07-01T16:40:05.696513Z"
+     "end_time": "2025-07-25T07:37:11.056684Z",
+     "start_time": "2025-07-25T07:36:55.150272Z"
     }
    },
    "source": [
@@ -97,8 +106,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:40:30.836996Z",
-     "start_time": "2025-07-01T16:40:30.832386Z"
+     "end_time": "2025-07-25T07:37:11.911975Z",
+     "start_time": "2025-07-25T07:37:11.908078Z"
     }
    },
    "cell_type": "code",
@@ -116,8 +125,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T07:04:47.145606Z",
-     "start_time": "2025-07-02T07:04:47.058956Z"
+     "end_time": "2025-07-25T07:37:12.066129Z",
+     "start_time": "2025-07-25T07:37:11.970193Z"
     }
    },
    "cell_type": "code",
@@ -285,18 +294,18 @@
        "</div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T07:04:56.603203Z",
-     "start_time": "2025-07-02T07:04:56.569996Z"
+     "end_time": "2025-07-25T07:37:13.150111Z",
+     "start_time": "2025-07-25T07:37:13.114188Z"
     }
    },
    "cell_type": "code",
@@ -329,13 +338,13 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-02T07:05:08.605997Z",
-     "start_time": "2025-07-02T07:05:01.543494Z"
+     "end_time": "2025-07-25T07:37:27.473863Z",
+     "start_time": "2025-07-25T07:37:18.727397Z"
     }
    },
    "cell_type": "code",
@@ -353,7 +362,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "3aca78d9bb4748c9b5367fa8ee319d46"
+       "model_id": "1545737749004239978c2bbe5df465ca"
       }
      },
      "metadata": {},
@@ -365,7 +374,8 @@
      "text": [
       "\n",
       "  0%|          | 0/15 [00:00<?, ?it/s]\u001B[A\n",
-      "100%|██████████| 15/15 [00:00<00:00, 144.67it/s]\u001B[A\n"
+      "  7%|▋         | 1/15 [00:00<00:01,  7.21it/s]\u001B[A\n",
+      "100%|██████████| 15/15 [00:00<00:00, 35.32it/s][A\n"
      ]
     },
     {
@@ -376,7 +386,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "226578b041e6414eb2d413f4aa119def"
+       "model_id": "95c5461ee74241578d344ea4babaa7db"
       }
      },
      "metadata": {},
@@ -390,7 +400,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b59a90f1278e4967b30889537a33ab04"
+       "model_id": "ca790e62e2b942dc8a70e7174d4eea9e"
       }
      },
      "metadata": {},
@@ -404,14 +414,14 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "f4299fe7385e4c6d9e0498b9094282ce"
+       "model_id": "91874a33d31d4d91ba30ccf9f9cb3180"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 13
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -422,8 +432,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:42:40.650186Z",
-     "start_time": "2025-07-01T16:42:37.033132Z"
+     "end_time": "2025-07-25T07:38:07.660179Z",
+     "start_time": "2025-07-25T07:37:32.535662Z"
     }
    },
    "cell_type": "code",
@@ -439,8 +449,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:43:17.669159Z",
-     "start_time": "2025-07-01T16:43:17.654254Z"
+     "end_time": "2025-07-25T07:38:19.663784Z",
+     "start_time": "2025-07-25T07:38:19.652724Z"
     }
    },
    "cell_type": "code",
@@ -471,8 +481,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:43:20.262594Z",
-     "start_time": "2025-07-01T16:43:18.525935Z"
+     "end_time": "2025-07-25T07:38:23.076025Z",
+     "start_time": "2025-07-25T07:38:20.399210Z"
     }
    },
    "cell_type": "code",
@@ -512,8 +522,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-01T16:43:23.417620Z",
-     "start_time": "2025-07-01T16:43:20.862675Z"
+     "end_time": "2025-07-25T07:38:26.297324Z",
+     "start_time": "2025-07-25T07:38:23.218758Z"
     }
    },
    "cell_type": "code",
@@ -544,8 +554,9 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "# this does not work\n",
     "a = ProfileReport(df)\n",
-    "a.to_file(\"spark_profile.html\")"
+    "a.to_file(\"../spark_profile.html\")"
    ],
    "id": "ba1e64cb1f7abde6",
    "outputs": [],
